--- a/package.json
+++ b/package.json
@@ -11,8 +11,11 @@
   "dependencies": {
     "compression": "^1.7.1",
     "date-fns": "^1.30.1",
+    "got": "^11.8.2",
     "gray-matter": "^4.0.2",
+    "jsdom": "^16.5.3",
     "marked": "^0.7.0",
+    "node-cron": "^3.0.0",
     "polka": "^0.5.0",
     "prismjs": "^1.21.0",
     "reading-time": "^1.2.0",
